added db configs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=kankantrade
+
+# Database Configuration for PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/kankantrade
+spring.datasource.username=postgres
+spring.datasource.password=root123
+
+# Disable the spring banner
+spring.main.banner-mode=off
+
+# Make the logs minimal
+logging.level.org.springframework=WARN
+
+# Change the base API URL
+server.servlet.context-path=/api
