--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.application.name=kankantrade
 spring.datasource.url=jdbc:postgresql://localhost:5432/kankantrade
 spring.datasource.username=postgres
 spring.datasource.password=root123
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 # Disable the spring banner
 spring.main.banner-mode=off
